<resources>
    <string name="app_name">儒釋道網路電視台</string>
    <string name="navigation_drawer_open">打開導航</string>
    <string name="navigation_drawer_close">關閉導航</string>
    <string name="action_select_server">選擇線路</string>
    <string name="jwjy">經文講義</string>
    <string name="jsy">僅聲音</string>
    <string name="spbt">視頻標題</string>
    <string name="jmlb">節目列表</string>
    <string name="zxxx">最新消息</string>
    <string name="wljwl">未連接網絡，程序將關閉。\r\n請連網後重新打開本程序。</string>
    <string name="zrsj">載入數據</string>
    <string name="sjjzz">數據加載中...</string>
    <string name="onstop">程序關閉，關閉視頻。</string>
    <string name="sxwc">刷新完成</string>
    <string name="sjhcsb">獲取數據失敗，程序將關閉。\r\n請連網後重新打開本程序。</string>
    <string name="wlfwcw">網絡服務錯誤</string>
    <string name="wlljcw">網絡連接錯誤</string>
    <string name="wlcs">網絡超時</string>
    <string name="action_select_program_type">節目類型</string>
    <string name="lxwm">聯繫我們</string>
    <string name="spjzsb">視頻加載失敗。\r\n请检查网络重新加載。</string>
    <string name="gfwz">官方網站</string>
    <string name="pl">噗浪</string>
    <string name="xlwb">新浪微博</string>
    <string name="txwb">騰訊微博</string>
    <string name="czxx">電子信箱</string>
    <string name="wxh">微信號</string>
    <string name="action_news">新聞</string>
    <string name="action_about">關於</string>
    <string name="bt_start">打開電臺</string>
    <string name="app_sub_title">崇德興仁  教學為先</string>
    <string name="fygl">法語甘露</string>
    <string name="title_activity_mp3_player">播放器</string>
    <string name="title_activity_mp3_manager">音頻點播管理</string>
    <string name="bt_label_spzb">視頻直播</string>
    <string name="bt_label_ypdb">音頻點播</string>
    <string name="action_manager_mp3">音頻點播管理</string>
    <string name="save_change">保存</string>
    <string name="action_add_local_mp3_program">添加</string>
    <string name="action_local_setting">設置</string>
    <string name="title_activity_local_mp3_manager">選擇下載項目</string>
    <string name="down_num_explain">以當前播放為中心，當下載文件數量達到此數值時，就停止下載。在繼續播放下一個音頻時，刪除最舊的那個文件，下載新的文件。</string>
    <string name="only_wifi_down_mp3">僅在使用WIFI時下載</string>
    <string name="down_mp3_max_num">最大下載量</string>
    <string name="action_local_mp3">音頻下載</string>
    <string name="down_msg_connect_fail">連接伺服器出錯，停止下載。</string>
    <string name="down_msg_remote_file_noexist">遠程文件不存在</string>
    <string name="down_msg_local_bigger_remote">文件下載完成</string>
    <string name="down_msg_download_success">下載完成</string>
    <string name="down_msg_no_next">已達到最大下載數量</string>
    <string name="down_msg_no_wifi_net">WIFI網路連接失敗</string>
    <string name="down_msg_wifi_net_ok">WIFI網路連接成功</string>
    <string name="local_mp3_explain">請點右上角「添加」下載MP3。系統會自動下載，最多下載5個，多餘的將被刪除。</string>
    <string name="dialog_ok">確定</string>
    <string name="dialog_cancle">關閉</string>
    <string name="site_url">http://www.amtb.tw/</string>
    <string name="pl_url">http://www.plurk.com/amtbtw</string>
    <string name="xlwb_url">http://weibo.com/amtbtw</string>
    <string name="txwb_url">http://t.qq.com/amtbhz</string>
    <string name="dzxx_url">amtb@amtb.tw</string>
    <string name="bt_invite_friends">向好友推薦</string>
    <string name="bt_check_upgrade">檢測更新</string>
    <string name="down_url">http://amtb.sfzd5.com/upgrade.json</string>
    <string name="devxx">問題反饋電子信箱</string>
    <string name="devxx_url">amtb@mail.sfzd5.com</string>
</resources>