<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jianchi.fsp.buddhismnetworkradio.activity.ContactActivity"
    tools:showIn="@layout/activity_contact">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_marginBottom="8dp"
                android:divider="@drawable/bottom_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gfwz"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="http://www.amtb.tw/" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="http://www.amtb.cn/" />
            </LinearLayout>


            <LinearLayout
                android:layout_marginBottom="8dp"
                android:divider="@drawable/bottom_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pl"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="http://www.plurk.com/amtbtw" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="8dp"
                android:divider="@drawable/bottom_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xlwb"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="http://weibo.com/amtbtw" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="8dp"
                android:divider="@drawable/bottom_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txwb"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="http://t.qq.com/amtbhz" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="8dp"
                android:divider="@drawable/bottom_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/czxx"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="amtb@amtb.tw" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="8dp"
                android:divider="@drawable/bottom_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wxh"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="amtbhz" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/weixin" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
